test/compilable/imports/package10022/b.d

module imports.package10022.b;

void funb() {}
