test/fail_compilation/fail215.d
class b
{
    final abstract void k();
}

